update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,32 @@
-
-# status bar and pane border styling
-set -g default-terminal "screen-256color"
-set -g status-bg colour239
-set -g status-fg colour224
-set -g pane-border-style 'fg=colour239'
-set -g pane-active-border-style 'fg=colour224'
+set -g default-terminal "xterm-256color"
+set-option -a terminal-features 'xterm-256color:RGB'
 
 # copy mode using vi keybindings
 set-window-option -g mode-keys vi
+
+# tpm plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'rose-pine/tmux'
+
+
+# tmux rose-pine theme settings
+set -g @rose_pine_variant 'moon'
+set -g @rose_pine_date_time 'on' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+# set -g @rose_pine_bar_bg_disabled_color_option 'default'
+
+set -g @rose_pine_only_windows 'on' # Leaves only the window module, for max focus and space
+set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+
+set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
+set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
+
+# Example values for these can be:
+set -g @rose_pine_left_separator ' > ' # The strings to use as separators are 1-space padded
+set -g @rose_pine_right_separator ' < ' # Accepts both normal chars & nerdfont icons
+set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
+set -g @rose_pine_window_separator ' - ' # Replaces the default `:` between the window number and name
+
